--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/tvMain"
         android:layout_width="97dp"
         android:layout_height="47dp"
         android:text="Hello World!"
@@ -17,10 +18,11 @@
         app:layout_constraintVertical_bias="0.305" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnChangeText"
         android:layout_width="114dp"
         android:layout_height="62dp"
         android:text="Click"
+        android:onClick="onBtnClick"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
