Revert "The functionality to change the color was added"
This reverts commit f692bce732c4ad277236e36cf5619e68d50908ca.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,17 +22,8 @@
         android:layout_width="114dp"
         android:layout_height="62dp"
         android:text="Click"
-        android:onClick="onBtnChangeTextClick"
+        android:onClick="onBtnClick"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/btnChangeColor"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        android:onClick="onBtnChangeColorClick"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
